# school_management_system_using-_separatefiles

./: CMakeLists.txt  README.md  admin.c  admin.h  faculty.c  faculty.h  fees.c  fees.h  fileoperation.c  fileoperation.h  main.c  main1.c  main1.h  section.c  section.h  student.c  student.h
